--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ document = [
   "ase",
   "cmaes>=0.10.0",  # optuna/samplers/_cmaes.py.
   "fvcore",
-  "kaleido<0.4",  # TODO(nzw0301): Remove the version constraint by installing browser separately.
+  "kaleido<0.4,!=0.2.1.post1",  # TODO(nzw0301): Remove the version constraint by installing browser separately.
   "lightgbm",
   "matplotlib!=3.6.0",
   "pandas",
